# bisque

./: .dockerignore  .env.dev  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  init.sql  pyproject.toml
src/: containers.py  gunicorn_conf.py  settings.py
src/api/: __init__.py  asgi.py  urls.py  wsgi.py
src/api/flats/: admin.py  apps.py  views.py
src/api/messaging/: client.py  events.py
src/data_access/: mixins.py
src/data_access/flats/: models.py
src/data_access/flats/fixtures/: 1-no-residence.yaml  2-no-residence.yaml  3-liviu-deleanu.yaml  4-buzdugan.yaml
src/data_access/flats/migrations/: 0001_initial.py
